# Game-Storyline-Generator-GenAI

Game_Storyline/: pyproject.toml  requirements.txt
Game_Storyline/game_storyline/: slga.py
